tests/approvals/integration_test.test_build_dir.approved.txt
exit_code: 1
stdout:

stderr:
Check of <root-dir>/sample_inputs/proj_no_error/src/main.cpp finished with exit code 1.
<root-dir>/sample_inputs/proj_no_error/src/main.cpp:1:10: error: 'sample_function.h' file not found [clang-diagnostic-error]
#include "sample_function.h"
         ^~~~~~~~~~~~~~~~~~~

Error while trying to load a compilation database:
Could not auto-detect compilation database from directory "."
No compilation database found in <root-dir>/sample_inputs/proj_no_error/. or any parent directory
fixed-compilation-database: Error while opening fixed database: No such file or directory
json-compilation-database: Error while opening JSON database: No such file or directory
Running without flags.
1 error generated.
Error while processing <root-dir>/sample_inputs/proj_no_error/src/main.cpp.

Check of <root-dir>/sample_inputs/proj_no_error/src/sample_function.cpp finished with exit code 1.
<root-dir>/sample_inputs/proj_no_error/src/sample_function.cpp:1:10: error: 'sample_function.h' file not found [clang-diagnostic-error]
#include "sample_function.h"
         ^~~~~~~~~~~~~~~~~~~

Error while trying to load a compilation database:
Could not auto-detect compilation database from directory "."
No compilation database found in <root-dir>/sample_inputs/proj_no_error/. or any parent directory
fixed-compilation-database: Error while opening fixed database: No such file or directory
json-compilation-database: Error while opening JSON database: No such file or directory
Running without flags.
34449 warnings and 1 error generated.
Error while processing <root-dir>/sample_inputs/proj_no_error/src/sample_function.cpp.

Some errors detected.

